syntax = "proto3";

option go_package = "protos/user-proto";

import "google/protobuf/timestamp.proto";

service UserService{
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
    rpc GetUserByUsername(GetUserByUsernameRequest) returns (GetUserByUsernameResponse) {}
    rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse) {}
    rpc GetUserByPhone(GetUserByPhoneRequest) returns (GetUserByPhoneResponse) {}
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
    rpc Logout(LogoutRequest) returns (LogoutResponse) {}
    rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse) {}
    rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse) {}
    rpc AddAvatar(AddAvatarRequest) returns (AddAvatarResponse) {}
    rpc RemoveAvatar(RemoveAvatarRequest) returns (RemoveAvatarResponse) {}
    rpc UpdateAvatar(UpdateAvatarRequest) returns (UpdateAvatarResponse) {}
    rpc GetAvatar(GetAvatarRequest) returns (GetAvatarResponse) {}
    rpc AddTweet(AddTweetRequest) returns (AddTweetResponse) {}
    rpc RemoveTweet(RemoveTweetRequest) returns (RemoveTweetResponse) {}
    rpc AddFollower(AddFollowerRequest) returns (AddFollowerResponse) {}
    rpc RemoveFollower(RemoveFollowerRequest) returns (RemoveFollowerResponse) {}
    rpc AddFollowing(AddFollowingRequest) returns (AddFollowingResponse) {}
    rpc RemoveFollowing(RemoveFollowingRequest) returns (RemoveFollowingResponse) {}
    rpc AcceptFollowRequest(AcceptFollowRequestRequest) returns (AcceptFollowRequestResponse) {}
    rpc RejectFollowRequest(RejectFollowRequestRequest) returns (RejectFollowRequestResponse) {}
    rpc VerifyCode(VerifyCodeRequest) returns (VerifyCodeResponse) {}
    rpc BlockUser(BlockUserRequest) returns (BlockUserResponse) {}
    rpc UnblockUser(UnblockUserRequest) returns (UnblockUserResponse) {}
}

message VerifyCodeRequest {
    string login_identifier = 1;
    string code = 2;
}

message VerifyCodeResponse {
    bool success = 1;
    string message = 2;
}

message User {
    int32 id = 1;
    string name = 2;
    string username = 3;
    string email = 4;
    string phone = 5;
    string password = 6;
    string bio = 7;
    string avatar_url = 8;
    int32 tweet_count = 9;
    int32 follower_count = 10;
    int32 following_count = 11;
    google.protobuf.Timestamp created_at = 12;
    repeated int32 tweets = 13;
    repeated int32 followers = 14;
    repeated int32 following = 15;  
    repeated int32 blocked_users = 16;
    bool is_private = 17;
}

message Avatar {
    int64 id = 1;
    int64 user_id = 2;
    string url = 3;
}

message RegisterRequest { 
    string name = 1;
    string username = 2;
    string email = 3;
    string phone = 4;
    string password = 5;
}

message RegisterResponse {
    bool success = 1;
    string message = 2;
    User user = 3;
}

message LoginRequest {
    string login_identifier = 1;
    string password = 2;
}

message LoginResponse {
    bool success = 1;
    string message = 2;
    User user = 3;
    string token = 4;
}

message GetUserRequest {
    int32 user_id = 1;
    int32 user_id_to_get = 2;
}

message GetUserResponse {
    bool success = 1;
    string message = 2;
    User user = 3;
}

message UpdateUserRequest {
    int32 user_id = 1;
    string name = 2;
    string username = 3;
    string email = 4;
    string phone = 5;
    string bio = 6;
    bool is_private = 7;
}

message UpdateUserResponse {
    bool success = 1;
    string message = 2;
    User user = 3;
}

message DeleteUserRequest {
    int32 user_id = 1;
}

message DeleteUserResponse {
    bool success = 1;
    string message = 2;
}

message LogoutRequest {
    int32 user_id = 1;
}

message LogoutResponse {
    bool success = 1;
    string message = 2;
}

message ChangePasswordRequest {
    int32 user_id = 1;
    string old_password = 2;
    string new_password = 3;
}

message ChangePasswordResponse {
    bool success = 1;
    string message = 2;
}

message ForgotPasswordRequest {
    string login_identifier = 1;
    string new_password = 2;
}

message ForgotPasswordResponse {
    bool success = 1;
    string message = 2;
}

message AddAvatarRequest {
    int32 user_id = 1;
    string avatar_url = 2;
}

message AddAvatarResponse {
    bool success = 1;
    string message = 2;
}

message RemoveAvatarRequest {
    int32 user_id = 1;
}

message RemoveAvatarResponse {
    bool success = 1;
    string message = 2;
}

message UpdateAvatarRequest {
    int32 user_id = 1;
    string avatar_url = 2;
}

message UpdateAvatarResponse {
    bool success = 1;
    string message = 2;
}

message GetAvatarRequest {
    int32 user_id = 1;
}

message GetAvatarResponse {
    bool success = 1;
    string message = 2;
    Avatar avatar = 3;
}

message GetUserByUsernameRequest {
    string username = 1;
}

message GetUserByUsernameResponse {
    bool success = 1;
    string message = 2;
    User user = 3;
}

message GetUserByEmailRequest {
    string email = 1;
}

message GetUserByEmailResponse {
    bool success = 1;
    string message = 2;
    User user = 3;
}

message GetUserByPhoneRequest {
    string phone = 1;
}

message GetUserByPhoneResponse {
    bool success = 1;
    string message = 2;
    User user = 3;
}

message AddTweetRequest {
    int32 user_id = 1;
    int32 tweet_id = 2;
}

message AddTweetResponse {
    bool success = 1;
    string message = 2;
}

message RemoveTweetRequest {
    int32 user_id = 1;
    int32 tweet_id = 2;
}

message RemoveTweetResponse {
    bool success = 1;
    string message = 2;
}

message AddFollowerRequest {
    int32 user_id = 1;
    int32 follower_id = 2;
}

message AddFollowerResponse {
    bool success = 1;
    string message = 2;
}

message RemoveFollowerRequest {
    int32 user_id = 1;
    int32 follower_id = 2;
}

message RemoveFollowerResponse {
    bool success = 1;
    string message = 2;
}

message AddFollowingRequest {
    int32 user_id = 1;
    int32 following_id = 2;
}

message AddFollowingResponse {
    bool success = 1;
    string message = 2;
}

message RemoveFollowingRequest {
    int32 user_id = 1;
    int32 following_id = 2;
}   

message RemoveFollowingResponse {
    bool success = 1;
    string message = 2;
}

message AcceptFollowRequestRequest {
    int32 user_id = 1;
    int32 follower_id = 2;
}

message AcceptFollowRequestResponse {
    bool success = 1;
    string message = 2;
}

message RejectFollowRequestRequest {
    int32 user_id = 1;
    int32 follower_id = 2;
}

message RejectFollowRequestResponse {
    bool success = 1;
    string message = 2;
}

message BlockUserRequest {
    int32 user_id = 1;
    int32 blocked_user_id = 2;
}

message BlockUserResponse {
    bool success = 1;
    string message = 2;
}

message UnblockUserRequest {
    int32 user_id = 1;
    int32 blocked_user_id = 2;
}

message UnblockUserResponse {
    bool success = 1;
    string message = 2;
}   